perform upgrade to nexus 3.82